--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -8,24 +8,10 @@ main {
     height: 100vh;
 }
 
-/*ul {*/
-    /*list-style: none;*/
-/*}*/
-/*ul li {*/
-    /*padding-bottom: 2rem;*/
-/*}*/
-
-/*ul li:nth-child(3) {*/
-    /*padding-top: 2rem;*/
-/*}*/
-
-#selectall {
-    /*margin-left: 2.5rem;*/
-}
-/*.border-test{
+.border-test{
     border:2px solid red;
 }
-*/
+
 .panel{
     padding-left: 0;
     padding-right: 0;
@@ -35,7 +21,7 @@ main {
     padding-right: 15px;
 }
 .margin-top{
-    margin-top: 5rem;
+    margin-top: 3rem;
 }
 .margin-top-small{
     margin-top: 1.5rem;
@@ -50,14 +36,17 @@ main {
 .listheader {
     font-weight: bold;
     font-size: x-large;
-    margin: 0;
+}
+
+#smslistheader {
+    margin: 0 0 2rem 0;
 }
 .margin-bottom{
     margin-bottom: 2rem;
 }
 
 .content {
-    margin-top: 10vh;
+    margin-top: 8vh;
 }
 
 h1 {
@@ -69,20 +58,6 @@ h1 {
     font-size: 5rem;
 }
 
-.functions {
-    height: auto;
-    overflow-y: scroll;
-}
-
-.panel-buttons {
-    display: inline;
-    margin-left: 30rem;
-}
-
-#status-time {
-    /*font-weight: bold;*/
-}
-
 #panel-title {
     font-weight: bold;
     font-size: large;
@@ -92,10 +67,6 @@ h1 {
     font-weight: bold;
 }
 
-/*.border-test {*/
-    /*border: dotted red;*/
-/*}*/
-
 .button-size {
     /*color: #0bcb9a;*/
     font-size: 2.5rem;
@@ -103,20 +74,259 @@ h1 {
     padding: .5rem 1rem .5rem 1rem;
 }
 
-.button-circle {
-    border-radius: 50%;
-    -moz-border-radius:50%;
-    -webkit-border-radius: 50%;
+.centered {
+	position: fixed;
+	top: 10%;
+	right: 15%;
+	margin-top: -35px;
+	margin-right: -35px;
 }
 
-.testicon {
-    content:"\e089";
+/* ### CSS bars loader ### */
+
+.loader,
+.loader:before,
+.loader:after {
+  background: #ffffff;
+  -webkit-animation: load1 1s infinite ease-in-out;
+  animation: load1 1s infinite ease-in-out;
+  width: 1em;
+  height: 4em;
+}
+.loader {
+  color: #ffffff;
+  text-indent: -9999em;
+  margin: 88px auto;
+  position: relative;
+  font-size: 11px;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+.loader:before,
+.loader:after {
+  position: absolute;
+  top: 0;
+  content: '';
+}
+.loader:before {
+  left: -1.5em;
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+.loader:after {
+  left: 1.5em;
+}
+@-webkit-keyframes load1 {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 0;
+    height: 4em;
+  }
+  40% {
+    box-shadow: 0 -2em;
+    height: 5em;
+  }
+}
+@keyframes load1 {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 0;
+    height: 4em;
+  }
+  40% {
+    box-shadow: 0 -2em;
+    height: 5em;
+  }
 }
 
-.red {
-    color: red;
+
+/* ### CSS folding loader ### */
+
+.cssload-thecube {
+	width: 70px;
+	height: 70px;
+	transform: rotateZ(45deg);
+	-o-transform: rotateZ(45deg);
+	-ms-transform: rotateZ(45deg);
+	-webkit-transform: rotateZ(45deg);
+	-moz-transform: rotateZ(45deg);
 }
 
-.blue {
-    color: dodgerblue;
+.cssload-thecube .cssload-cube {
+	position: relative;
+	transform: rotateZ(45deg);
+	-o-transform: rotateZ(45deg);
+	-ms-transform: rotateZ(45deg);
+	-webkit-transform: rotateZ(45deg);
+	-moz-transform: rotateZ(45deg);
+}
+
+.cssload-thecube .cssload-cube {
+	float: left;
+	width: 50%;
+	height: 50%;
+	position: relative;
+	transform: scale(1.1);
+	-o-transform: scale(1.1);
+	-ms-transform: scale(1.1);
+	-webkit-transform: scale(1.1);
+	-moz-transform: scale(1.1);
+}
+
+.cssload-thecube .cssload-cube:before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgb(43, 160, 199);
+	animation: cssload-fold-thecube 2.28s infinite linear both;
+	-o-animation: cssload-fold-thecube 2.28s infinite linear both;
+	-ms-animation: cssload-fold-thecube 2.28s infinite linear both;
+	-webkit-animation: cssload-fold-thecube 2.28s infinite linear both;
+	-moz-animation: cssload-fold-thecube 2.28s infinite linear both;
+	transform-origin: 100% 100%;
+	-o-transform-origin: 100% 100%;
+	-ms-transform-origin: 100% 100%;
+	-webkit-transform-origin: 100% 100%;
+	-moz-transform-origin: 100% 100%;
+}
+
+.cssload-thecube .cssload-c2 {
+	transform: scale(1.1) rotateZ(90deg);
+	-o-transform: scale(1.1) rotateZ(90deg);
+	-ms-transform: scale(1.1) rotateZ(90deg);
+	-webkit-transform: scale(1.1) rotateZ(90deg);
+	-moz-transform: scale(1.1) rotateZ(90deg);
+}
+
+.cssload-thecube .cssload-c3 {
+	transform: scale(1.1) rotateZ(180deg);
+	-o-transform: scale(1.1) rotateZ(180deg);
+	-ms-transform: scale(1.1) rotateZ(180deg);
+	-webkit-transform: scale(1.1) rotateZ(180deg);
+	-moz-transform: scale(1.1) rotateZ(180deg);
+}
+
+.cssload-thecube .cssload-c4 {
+	transform: scale(1.1) rotateZ(270deg);
+	-o-transform: scale(1.1) rotateZ(270deg);
+	-ms-transform: scale(1.1) rotateZ(270deg);
+	-webkit-transform: scale(1.1) rotateZ(270deg);
+	-moz-transform: scale(1.1) rotateZ(270deg);
+}
+
+.cssload-thecube .cssload-c2:before {
+	animation-delay: 0.285s;
+	-o-animation-delay: 0.285s;
+	-ms-animation-delay: 0.285s;
+	-webkit-animation-delay: 0.285s;
+	-moz-animation-delay: 0.285s;
+}
+
+.cssload-thecube .cssload-c3:before {
+	animation-delay: 0.57s;
+	-o-animation-delay: 0.57s;
+	-ms-animation-delay: 0.57s;
+	-webkit-animation-delay: 0.57s;
+	-moz-animation-delay: 0.57s;
+}
+
+.cssload-thecube .cssload-c4:before {
+	animation-delay: 0.855s;
+	-o-animation-delay: 0.855s;
+	-ms-animation-delay: 0.855s;
+	-webkit-animation-delay: 0.855s;
+	-moz-animation-delay: 0.855s;
+}
+
+@keyframes cssload-fold-thecube {
+	0%, 10% {
+		transform: perspective(87px) rotateX(-180deg);
+		opacity: 0;
+	}
+	25%,
+	75% {
+		transform: perspective(87px) rotateX(0deg);
+		opacity: 1;
+	}
+	90%,
+	100% {
+		transform: perspective(87px) rotateY(180deg);
+		opacity: 0;
+	}
+}
+
+@-o-keyframes cssload-fold-thecube {
+	0%, 10% {
+		-o-transform: perspective(87px) rotateX(-180deg);
+		opacity: 0;
+	}
+	25%,
+	75% {
+		-o-transform: perspective(87px) rotateX(0deg);
+		opacity: 1;
+	}
+	90%,
+	100% {
+		-o-transform: perspective(87px) rotateY(180deg);
+		opacity: 0;
+	}
+}
+
+@-ms-keyframes cssload-fold-thecube {
+	0%, 10% {
+		-ms-transform: perspective(87px) rotateX(-180deg);
+		opacity: 0;
+	}
+	25%,
+	75% {
+		-ms-transform: perspective(87px) rotateX(0deg);
+		opacity: 1;
+	}
+	90%,
+	100% {
+		-ms-transform: perspective(87px) rotateY(180deg);
+		opacity: 0;
+	}
+}
+
+@-webkit-keyframes cssload-fold-thecube {
+	0%, 10% {
+		-webkit-transform: perspective(87px) rotateX(-180deg);
+		opacity: 0;
+	}
+	25%,
+	75% {
+		-webkit-transform: perspective(87px) rotateX(0deg);
+		opacity: 1;
+	}
+	90%,
+	100% {
+		-webkit-transform: perspective(87px) rotateY(180deg);
+		opacity: 0;
+	}
+}
+
+@-moz-keyframes cssload-fold-thecube {
+	0%, 10% {
+		-moz-transform: perspective(87px) rotateX(-180deg);
+		opacity: 0;
+	}
+	25%,
+	75% {
+		-moz-transform: perspective(87px) rotateX(0deg);
+		opacity: 1;
+	}
+	90%,
+	100% {
+		-moz-transform: perspective(87px) rotateY(180deg);
+		opacity: 0;
+	}
 }
