Finished redesign of website

--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -128,20 +128,23 @@
                     <div class="panel-heading">
 
                         <div class="row">
-                            <div class="border-test margin-left-small" id="panel-title">Current Subscribers</div>
+                            <div class="margin-left-small" id="panel-title">Current Subscribers</div>
                         </div>
 
                         <div class="row">
-                            <div class="text-info border-test margin-left-small" id="status-time"></div>
+                            <div class="text-warning margin-left-small" id="status-time"></div>
                         </div>
 
-                        <div class="row margin-left-small border-test">
+                        <div class="divider"></div>
 
-                            {#                            <button id="showsubs" class="btn btn-xs btn-primary" type="button"><i#}
-                            {#                                    class="glyphicon glyphicon-refresh"></i></button>#}
-                            <p>Update online status</p>
-                            <button id="showstatus" class="btn btn-xs btn-info" type="button">Show status</button>
+                        <div class="row">
+                            <div class="margin-left-small margin-top-small">
 
+                                <p>Update list | Show online status</p>
+                                <button id="showsubs" class="btn btn-xs btn-danger" type="button"><i
+                                        class="glyphicon glyphicon-refresh"></i></button>
+                                <button id="showstatus" class="btn btn-xs btn-info" type="button">Show status</button>
+                            </div>
                         </div>
 
 
