--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -12,8 +12,7 @@
 <main>
 
 
-    {#        <img src="{% static "stuff/5.gif" %}" alt="My image"/>#}
-    <div class="centered">
+    <div class="">
         <div id="ajaxGif" class="loader"></div>
     </div>
 
